# chani-engine

./: .gitignore  ;  CMakeLists.txt  chani.pc.in
cmake/: CMakeCache.txt  FindFMOD.cmake  FindSDL3_image.cmake  Makefile  chani.pc  cmake_install.cmake  install_manifest.txt  libchani.so.0  libchani.so.0.1.0
examples/airplane-demo/: CMakeLists.txt  README.md  imgui.ini
examples/airplane-demo/assets/materials/: Cloud.mat
examples/airplane-demo/assets/shaders/: Cloud.frag  Cloud.vert  PerlinNoise.frag  PerlinNoise.glsl  Phong.frag  Phong.vert
examples/airplane-demo/cmake/: FindChani.cmake  FindIMGUI.cmake
examples/airplane-demo/include/: cloud.h  cloudComponent.h  cloudMaterial.h  orbitActor.h  perlinNoise.h  shapes.h  sphere.h
examples/airplane-demo/src/: cloud.cpp  cloudComponent.cpp  cloudMaterial.cpp  game.cpp  main.cpp  orbitActor.cpp  perlinNoise.cpp  sphere.cpp
examples/demo/: CMakeLists.txt  demo
examples/demo/assets/localization/: English.gptext
examples/demo/assets/materials/: CatWarrior.mat  Crosshair.mat  PBR.mat  Phong.mat  Plane.mat  Sphere.mat  Target.mat
examples/demo/assets/meshes/: Cube.gpmesh  Plane.gpmesh  RacingCar.gpmesh  Rifle.gpmesh  Sphere.gpmesh  Target.gpmesh
examples/demo/assets/shaders/: BasicMesh.frag  Phong.frag
examples/demo/cmake/: FindChani.cmake  FindSDL3.cmake
examples/demo/include/: FPSActor.h  game.h  orbitActor.h  plane.h  racingCarActor.h  sphere.h
examples/demo/src/: FPSActor.cpp  game.cpp  main.cpp  orbitActor.cpp  plane.cpp  racingCarActor.cpp  sphere.cpp
examples/pbr-demo/assets/materials/: PBR.mat  Phong10.mat  Phong50.mat  Phong90.mat
examples/pbr-demo/assets/meshes/: Sphere.gpmesh
examples/pbr-demo/assets/shaders/: PBR.vert  Phong.frag
examples/pbr-demo/cmake/: FindChani.cmake
examples/pbr-demo/include/: orbitActor.h  pbrMaterial.h  sphere.h
examples/pbr-demo/src/: game.cpp  main.cpp  orbitActor.cpp  pbrMaterial.cpp  sphere.cpp
include/: FPSActor.h  FPSCameraComponent.h  actor.h  animSpriteComponent.h  assets.h  asteroid.h  audioComponent.h  audioSystem.h  backgroundSpriteComponent.h  bullet.h  camera.h  cameraComponent.h  chani.h  circleCollisionComponent.h  component.h  computeShader.h  cube.h  directionalLight.h  enemy.h  followActor.h  followCameraComponent.h  game.h  gamepadState.h  grid.h  iRenderer.h  inputComponent.h  inputSystem.h  keyboardState.h  laser.h  log.h  material.h  maths.h  matrix4.h  mesh.h  meshComponent.h  mouseState.h  moveComponent.h  navComponent.h  orbitActor.h  orbitCameraComponent.h  (+25 more)
src/: FPSActor.cpp  FPSCameraComponent.cpp  actor.cpp  animSpriteComponent.cpp  assets.cpp  asteroid.cpp  audioComponent.cpp  audioSystem.cpp  backgroundSpriteComponent.cpp  bullet.cpp  camera.cpp  cameraComponent.cpp  chani.cpp  circleCollisionComponent.cpp  component.cpp  computeShader.cpp  controllerState.cpp  cube.cpp  enemy.cpp  followActor.cpp  followCameraComponent.cpp  game.cpp  gamepadState.cpp  grid.cpp  inputComponent.cpp  inputSystem.cpp  keyboardState.cpp  laser.cpp  log.cpp  main.cpp  material.cpp  matrix4.cpp  mesh.cpp  meshComponent.cpp  mouseState.cpp  moveComponent.cpp  navComponent.cpp  orbitActor.cpp  orbitCameraComponent.cpp  phongMaterial.cpp  (+24 more)
